Update api-server database and cosmos application UI styles
